.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: house
spec:
  selector:
    matchLabels:
      app: house
  template:
    metadata:
      labels:
        app: house
    spec:
      containers:
      - name: house-client
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "120Mi"
            cpu: "120"
        image: <IMAGE_FRONTEND>
        ports:
        - containerPort: 80
      - name: house-server
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "120Mi"
            cpu: "120"
        image: <IMAGE_BACKEND>
        ports:
          - containerPort: 3000
