.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: house
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: house
